@@ -109,7 +109,7 @@ struct SwapchainResizeTest
             // Vertex buffer data
             {"POSITIONA", 0, Format::R32G32B32_FLOAT, offsetof(Vertex, position), 0},
         };
-        IInputLayout::Desc inputLayoutDesc = {};
+        InputLayoutDesc inputLayoutDesc = {};
         inputLayoutDesc.inputElementCount = SLANG_COUNT_OF(inputElements);
         inputLayoutDesc.inputElements = inputElements;
         inputLayoutDesc.vertexStreamCount = SLANG_COUNT_OF(vertexStreams);
